force-app/main/default/objects/FieloCRUD__PageSection__c/FieloCRUD__PageSection__c.object-meta.xml
<CustomObject>
    <label>Page Section</label>
    <nameField>
        <label>Page Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>