force-app/main/default/objects/FieloCRUD__PageSection__c/fields/FieloCRUD__Columns__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Columns__c</fullName>
    <label>Columns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>