force-app/main/default/objects/FieloCRUD__PageSection__c/fields/FieloCRUD__PageLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PageLayout__c</fullName>
    <label>Page Layout</label>
    <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
    <relationshipLabel>Sections</relationshipLabel>
    <relationshipName>PageSections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>