force-app/main/default/objects/FieloCRUD__PageSection__c/fields/FieloCRUD__SiteName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__SiteName__c</fullName>
    <inlineHelpText>Complete this field if you want to display a heading for this section on the site. If you leave it blank the section header will be hidden.</inlineHelpText>
    <label>Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>