force-app/main/default/objects/FieloCRUD__PageSection__c/fields/FieloCRUD__Visibility__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__Visibility__c</fullName>
    <inlineHelpText>Define whether the section will be display when reading a record (view), when updating a record (edit) or in both scenarios.</inlineHelpText>
    <label>Visibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Both</fullName>
                <default>true</default>
                <label>Both</label>
            </value>
            <value>
                <fullName>View</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>